--- a/index.html
+++ b/index.html
@@ -3,14 +3,69 @@
 	<title>Generador de Tabla de Valores</title>
 
 	<style>
-		table, th, td {
-			border: 1px solid black;
-			border-collapse: collapse;
-			padding: 5px;
-		}
-		th {
-			background-color: #cccccc;
-		}
+		body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 36px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+label {
+  font-size: 18px;
+  color: #666;
+  display: block;
+  margin-bottom: 5px;
+}
+
+select,
+input[type="number"],
+button {
+  font-size: 16px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+button {
+  background-color: #4CAF50;
+  color: #fff;
+  border-color: #4CAF50;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #3e8e41;
+}
+
+table {
+  width: 100%;
+  margin-top: 20px;
+  border-collapse: collapse;
+  text-align: center;
+}
+
+th {
+  background-color: #4CAF50;
+  color: #fff;
+  font-weight: normal;
+}
+
+td {
+  background-color: #fff;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+
 	</style>
 
 </head>
