--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@ background-color: #fff;
 tbody tr:nth-child(even) {
 background-color: #f2f2f2;
 }
+		
+		table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
+}
 
 
 	</style>
