--- a/eccuadratica.html
+++ b/eccuadratica.html
@@ -8,9 +8,9 @@
 <body>
 
   <center>
-  <h1>Tabulacion de funciones</h1>
+  <h1 class="hrespo">Tabulacion de funciones</h1>
 
-  <h4>Ecuación cuadrática (y = ax^2 + bx + c)</h4><br>
+  <h4 class="hresposub">Ecuación cuadrática (y = ax^2 + bx + c)</h4><br>
 
   <label for="a">Inserte el valor de 'a': </label><br>
 <input type="number" id="a"><br><br>
@@ -69,6 +69,11 @@
 		}
 
 </script>
+
+<footer>
+  <p>&copy; 2023 Mario Ulises Molina Chávez, Leslie Alessandra Calderón Coronado. Todos los derechos reservados.</p>
+</footer>
+
 
 </body>
 
