--- a/eclineal.html
+++ b/eclineal.html
@@ -8,9 +8,9 @@
 <body>
 
   <center>
-  <h1>Tabulacion de funciones</h1>
+  <h1 class="hrespo">Tabulacion de funciones</h1>
 
-  <h4>Ecuación lineal (y = mx + n)</h4><br>
+  <h4 class="hresposub">Ecuación lineal (y = mx + n)</h4><br>
 
   <label for="m">Inserte el valor de 'm': </label><br>
 <input type="number" id="m"><br><br>
@@ -65,6 +65,10 @@
 		}
 
 </script>
+<br><br><br><br>
+<footer>
+  <p>&copy; 2023 Mario Ulises Molina Chávez, Leslie Alessandra Calderón Coronado. Todos los derechos reservados.</p>
+</footer>
 
 </body>
 
