--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 
 <body>
   <center>
-  <h1>Tabulacion de funciones</h1>
-  <label>Seleccione el tipo de funcion que desea tabular:</label> <br><br>
+  <h1 class="hrespo">Tabulacion de funciones</h1>
+  <p>Seleccione el tipo de funcion que desea tabular:</p> <br><br>
   <a href="eclineal.html">Ecuación lineal (y = mx + n)</a><br>
   <a href="eccuadratica.html">Ecuación cuadrática (y = ax^2 + bx + c)</a><br>
+
+  <footer>
+    <p>&copy; 2023 Mario Ulises Molina Chávez, Leslie Alessandra Calderón Coronado. Todos los derechos reservados.</p>
+  </footer>
 </center>
 </body>
 
