--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
 
-<head>
-  <title>Tabulacion de funciones</title>
-  <link href="estilo.css" rel="stylesheet" type="text/css">
-</head>
+    <link href="estilo.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <title>Tabulación de funciones</title>
 
-<body>
-  <center>
-  <h1 class="hrespo">Tabulacion de funciones</h1>
-  <p>Seleccione el tipo de funcion que desea tabular:</p> <br><br>
-  <a href="eclineal.html">Ecuación lineal (y = mx + n)</a><br>
-  <a href="eccuadratica.html">Ecuación cuadrática (y = ax^2 + bx + c)</a><br>
+  </head>
 
-  <footer>
-    <p>&copy; 2023 Mario Ulises Molina Chávez, Leslie Alessandra Calderón Coronado. Todos los derechos reservados.</p>
-  </footer>
-</center>
-</body>
+  <body>
+
+    <section class="home">
+      <div class="in-flex">
+
+        <center>
+        <h1 class="hrespo">Tabulacion de funciones</h1>
+        <p>Seleccione el tipo de funcion que desea tabular:</p> <br><br>
+        <a href="eclineal.html">Ecuación lineal (y = mx + n)</a><br>
+        <a href="eccuadratica.html">Ecuación cuadrática (y = ax^2 + bx + c)</a><br>
+
+      </div>
+    </section>
+
+    <footer>
+      <p>&copy; 2023 Mario Ulises Molina Chávez, Leslie Alessandra Calderón Coronado. Todos los derechos reservados.</p>
+    </footer>
+
+  </body>
 
 </html>
