--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
         <p>Seleccione el tipo de funcion que desea tabular:</p> <br><br>
         <a href="eclineal.html">Ecuación lineal (y = mx + n)</a><br>
         <a href="eccuadratica.html">Ecuación cuadrática (y = ax^2 + bx + c)</a><br>
+        <a href="eccubica.html">Ecuación cubica (y = ax^3 + bx^2 + cx + d)</a><br>
+        <a href="ecexponencial.html">Ecuación exponencial (y = b<sup>x</sup>)</a><br>
+        <a href="ecradicales1.html">Ecuación trigonometrica seno del tipo [y = sen(mx)]</a><br>
+
 
       </div>
     </section>
 
     <footer>
-      <p>&copy; 2023 Mario Ulises Molina Chávez, Leslie Alessandra Calderón Coronado. Todos los derechos reservados.</p>
     </footer>
 
   </body>
