--- a/eccubica.html
+++ b/eccubica.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
 
-
+    <link href="estilo.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
